tests/baselines/reference/bestCommonTypeWithContextualTyping.errors.txt
lib.d.ts(1241,18): error TS2300: Duplicate identifier 'conditional'.
tests/cases/compiler/bestCommonTypeWithContextualTyping.ts(19,5): error TS2300: Duplicate identifier 'conditional'.


==== tests/cases/compiler/bestCommonTypeWithContextualTyping.ts (1 errors) ====
    interface Contextual {
        dummy;
        p?: number;
    }
    
    interface Ellement {
        dummy;
        p: any;
    }
    
    var e: Ellement;
    
    // All of these should pass. Neither type is a supertype of the other, but the RHS should
    // always use Ellement in these examples (not Contextual). Because Ellement is assignable
    // to Contextual, no errors.
    var arr: Contextual[] = [e]; // Ellement[]
    var obj: { [s: string]: Contextual } = { s: e }; // { s: Ellement; [s: string]: Ellement }
    
    var conditional: Contextual = null ? e : e; // Ellement
        ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'conditional'.
    var contextualOr: Contextual = e || e; // Ellement